objects/Cost_Center__c.object
<CustomObject>
    <fields>
        <fullName>Aggregation_CONSOL__c</fullName>
        <label>Aggregation (CONSOL)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_OEP_FS__c</fullName>
        <label>Aggregation (OEP_FS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_OEP_WFP__c</fullName>
        <label>Aggregation (OEP_WFP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_OEP_WFSC__c</fullName>
        <label>Aggregation (OEP_WFSC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_WF_REP__c</fullName>
        <label>Aggregation (WF_REP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alias_Default__c</fullName>
        <inlineHelpText>Alias Default should be in the format &quot;1234 - Function Description&quot;.  Function Description should not include region information associated with the last 2 digits of the cost center.</inlineHelpText>
        <label>Alias: Default</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Stores the counter for how many times the record is approved using approval process.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Approval Counter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending L1 Approval</fullName>
                </value>
                <value>
                    <fullName>Pending L2 Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>L1 Approved</fullName>
                    <isActive>false</isActive>
                    <label>L1 Approved</label>
                </value>
                <value>
                    <fullName>L1 Rejected</fullName>
                    <isActive>false</isActive>
                    <label>L1 Rejected</label>
                </value>
                <value>
                    <fullName>L2 Approved</fullName>
                    <isActive>false</isActive>
                    <label>L2 Approved</label>
                </value>
                <value>
                    <fullName>L2 Rejected</fullName>
                    <isActive>false</isActive>
                    <label>L2 Rejected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Sub_Status__c</fullName>
        <label>Approval Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L1 Approved</fullName>
                </value>
                <value>
                    <fullName>L2 Approved</fullName>
                </value>
                <value>
                    <fullName>L1 Rejected</fullName>
                </value>
                <value>
                    <fullName>L2 Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Submitter__c</fullName>
        <description>value set in the approval process; used internally for notifications; not exposed on layouts</description>
        <label>Approval_Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Blackout_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blackout Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cost_Centers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Segment_ID__c</fullName>
        <formula>Business_Segment__r.Business_Segment_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Segment ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search using *0* or *&lt;some character&gt;*</inlineHelpText>
        <label>Business Segment</label>
        <referenceTo>Business_Segment__c</referenceTo>
        <relationshipLabel>Cost Centers</relationshipLabel>
        <relationshipName>Cost_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Primary_Function__c</fullName>
        <label>CC Primary Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General and Administrative</fullName>
                </value>
                <value>
                    <fullName>Cost of Revenues Education</fullName>
                </value>
                <value>
                    <fullName>Cost of Revenues Professional Services</fullName>
                </value>
                <value>
                    <fullName>Cost of Revenues Maintenance</fullName>
                </value>
                <value>
                    <fullName>Sales and Marketing</fullName>
                </value>
                <value>
                    <fullName>Cost of Revenues License</fullName>
                </value>
                <value>
                    <fullName>Research and Development</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Cost of Revenues Managed Hosted</fullName>
                </value>
                <value>
                    <fullName>Cost of Revenues SaaS</fullName>
                </value>
                <value>
                    <fullName>Cost of Revenues Other</fullName>
                </value>
                <value>
                    <fullName>Cost of Revenues Pay per Use</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Restructuring</fullName>
                </value>
                <value>
                    <fullName>Other Non-Operating</fullName>
                </value>
                <value>
                    <fullName>Foreign Exchange</fullName>
                    <isActive>false</isActive>
                    <label>Foreign Exchange</label>
                </value>
                <value>
                    <fullName>Share-Based</fullName>
                    <isActive>false</isActive>
                    <label>Share-Based</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Duplicate__c</fullName>
        <label>Check Duplicate</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cost_Center_Freez__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Center Freez</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Center_GAAP_Hierarchy_Parent_Node__c</fullName>
        <formula>Cost_Center_GAAP_Reporting_Hierarchy__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Center GAAP Hierarchy Parent Node</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_GAAP_Reporting_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search using *0*</inlineHelpText>
        <label>Cost Center GAAP Reporting Hierarchy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <value>Cost Center</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <value>Function Cost Center GAAP Reporting Hierarchy</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Cost Centers (Cost Center GAAP Reporting Hierarchy)</relationshipLabel>
        <relationshipName>Cost_Centers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Center_ID1__c</fullName>
        <formula>Function_ID__c +  Region_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Center ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_ID__c</fullName>
        <description>Unique cost center ID with 4+2 format</description>
        <label>Cost Center ID Not Used</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Management_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search using *0*</inlineHelpText>
        <label>Cost Center Management Hierarchy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <value>Cost Center</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <value>Function Cost Center Management Reporting Hierarchy</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Cost Centers</relationshipLabel>
        <relationshipName>Cost_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Mgmt_Hierarchy_Parent_Code__c</fullName>
        <formula>Cost_Center_Management_Hierarchy__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Center Mgmt Hierarchy Parent Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Type__c</fullName>
        <description>Determines type of cost center/function</description>
        <label>Cost Center Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost</fullName>
                    <default>true</default>
                    <label>Cost</label>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center Not Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Storage_CONSOL__c</fullName>
        <label>Data Storage (CONSOL)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_OEP_FS__c</fullName>
        <label>Data Storage (OEP_FS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_OEP_WFP__c</fullName>
        <label>Data Storage (OEP_WFP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_OEP_WFSC__c</fullName>
        <label>Data Storage (OEP_WFSC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_WF_REP__c</fullName>
        <label>Data Storage (WF_REP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage__c</fullName>
        <label>Data Storage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>unspecified</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Non Currency</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>SmartList</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Definition__c</fullName>
        <label>Definition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Cost center description</description>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FP_A_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FP&amp;A Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cost_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Function_ID__c</fullName>
        <label>Cost Center</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account_ID__c</fullName>
        <formula>GL_Account_Posting_Rule_Group1__r.Data_Element_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Account ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GL_Account_Posting_Rule_Group1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter 10 and click on search</inlineHelpText>
        <label>GL Account Posting Rule Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Reference_Data__c.Data_Element_ID_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Reference_Data__c.Data_Element__c</field>
                <operation>equals</operation>
                <value>Posting Rule Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reference_Data__c</referenceTo>
        <relationshipLabel>Cost Centers</relationshipLabel>
        <relationshipName>Cost_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Account_Posting_Rule_Group__c</fullName>
        <description>Posting group aligning to GL Account Posting Group</description>
        <label>GL Account Posting Rule Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opex</fullName>
                </value>
                <value>
                    <fullName>Bad Debt</fullName>
                </value>
                <value>
                    <fullName>Restructuring</fullName>
                </value>
                <value>
                    <fullName>HQ Fees</fullName>
                </value>
                <value>
                    <fullName>Interco TP</fullName>
                </value>
                <value>
                    <fullName>NonOp</fullName>
                </value>
                <value>
                    <fullName>Stock Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hierarchy_Type__c</fullName>
        <label>Hierarchy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Set</fullName>
                </value>
                <value>
                    <fullName>Stored</fullName>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Unique_ID__c</fullName>
        <description>Unique Key consisting of ID, Valid From, and Valid To</description>
        <label>Internal Unique ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Approved_Date__c</fullName>
        <description>Last time approval status was changed to Approved; set in WF</description>
        <label>Last Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Count__c</fullName>
        <label>Legal Entity Count</label>
        <summaryFilterItems>
            <field>Cost_Center_Legal_Entity__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Center_Legal_Entity__c.Cost_Center__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Required__c</fullName>
        <formula>IF(  Legal_Entity_Count__c &gt; 0,&apos;Legal Entity Available&apos;,&apos;Please add at least one Active Legal Entity to Submit for Approval&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity Availability Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewUpdated_Indicator__c</fullName>
        <formula>IF( Approval_Counter__c &lt; 2, &quot;New&quot;, &quot;Updated&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NewUpdated Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type_CONSOL__c</fullName>
        <label>Plan Type (CONSOL)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_OEP_FS__c</fullName>
        <label>Plan Type (OEP_FS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_OEP_WFP__c</fullName>
        <label>Plan Type (OEP_WFP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_OEP_WFSC__c</fullName>
        <label>Plan Type (OEP_WFSC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_WF_REP__c</fullName>
        <label>Plan Type (WF_REP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planning_Only_Yes_No__c</fullName>
        <formula>IF( Planning_Only__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning Only (Yes/No)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to determine use for planning only</description>
        <label>Planning Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <formula>Region__r.Region_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search using *&lt;some character&gt;* eg. *AU*</inlineHelpText>
        <label>Region</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Business_Region__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Business_Region__c.Level__c</field>
                <operation>notEqual</operation>
                <value>Country</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Business_Region__c</referenceTo>
        <relationshipLabel>Cost Centers</relationshipLabel>
        <relationshipName>Cost_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solve_Order_CONSOL__c</fullName>
        <label>Solve Order (CONSOL)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solve_Order_WF_REP__c</fullName>
        <label>Solve Order (WF_REP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Active/inactive indicator</description>
        <inlineHelpText>Do Not Edit – For Admin Use only</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>